[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/MainScreens/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/Parallax/MenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/buttons/button-normal.png" type="Texture" id=3]
[ext_resource path="res://assets/images/buttons/button-click.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buttons/button-hover.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Pacifico/Pacifico-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/buttons/exit.png" type="Texture" id=7]
[ext_resource path="res://assets/images/buttons/team.png" type="Texture" id=8]
[ext_resource path="res://assets/images/buttons/sound-on.png" type="Texture" id=9]
[ext_resource path="res://assets/images/buttons/sound-off.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/Lobster/Lobster-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://src/Buttons/Privacy/PrivacyButton.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]

size = 55
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]

size = 50
font_data = ExtResource( 11 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuBackground" parent="." instance=ExtResource( 2 )]

[node name="Tables" type="TextureButton" parent="."]
margin_top = 598.0
margin_right = 432.0
margin_bottom = 773.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="TablesLabel" type="Label" parent="Tables"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -9.42859
margin_bottom = -9.42859
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.225708, 0.106354, 0.800781, 1 )
custom_colors/font_color_shadow = Color( 0.202774, 0.177612, 0.378906, 1 )
text = "Tables"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 302.0
margin_top = 596.0
margin_right = 734.0
margin_bottom = 771.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="StartLabel" type="Label" parent="Start"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -13.4285
margin_bottom = -13.4285
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.225708, 0.106354, 0.800781, 1 )
custom_colors/font_color_shadow = Color( 0.202774, 0.177612, 0.378906, 1 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Clock" type="TextureButton" parent="."]
margin_left = 610.0
margin_top = 596.0
margin_right = 1042.0
margin_bottom = 771.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="StartLabel" type="Label" parent="Clock"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -13.4285
margin_bottom = -13.4285
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.225708, 0.106354, 0.800781, 1 )
custom_colors/font_color_shadow = Color( 0.202774, 0.177612, 0.378906, 1 )
text = "Time Trial"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="TextureButton" parent="."]
visible = false
margin_left = 6.0
margin_top = 73.0
margin_right = 126.0
margin_bottom = 194.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 7 )

[node name="Team" type="TextureButton" parent="."]
margin_left = 1160.0
margin_top = 610.0
margin_right = 1290.0
margin_bottom = 711.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 8 )

[node name="Sound" type="TextureButton" parent="."]
margin_left = 1050.0
margin_top = 610.0
margin_right = 1205.0
margin_bottom = 765.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="Message" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 70, 310 )

[node name="TextBackground" type="ColorRect" parent="Message"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1130.0
margin_bottom = 220.0
color = Color( 0, 0, 0, 0.627451 )

[node name="WelcomeMessage" type="RichTextLabel" parent="Message"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1100.0
margin_bottom = 190.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.921569, 0, 0, 1 )
bbcode_enabled = true

[node name="PrivacyButton" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = 1180.0
margin_top = 70.0
margin_right = 1260.0
margin_bottom = 150.0

[connection signal="pressed" from="Tables" to="." method="_on_Tables_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Clock" to="." method="_on_Clock_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Team" to="." method="_on_Team_pressed"]
[connection signal="pressed" from="Sound" to="." method="_on_Sound_pressed"]
[connection signal="meta_clicked" from="Message/WelcomeMessage" to="." method="_on_WelcomeMessage_meta_clicked"]
[connection signal="pressed" from="PrivacyButton" to="." method="_on_PrivacyButton_pressed"]
